--- a/Assignment1.1
+++ b/Assignment1.1
@@ -6,7 +6,9 @@
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>
+<img id="codingmeme" src="codingmeme.png">
+</p>
 
 </body>
 </html>
