--- a/Assignment1.1
+++ b/Assignment1.1
@@ -7,7 +7,7 @@
 
 <h1>This is a Heading</h1>
 <p>
-<img id="codingmeme" src="codingmeme.png">
+<img id="codingmeme" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true">
 </p>
 
 </body>
