--- a/Assignment1.1
+++ b/Assignment1.1
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Programming Meme</h1>
 <p>
 <img id="codingmeme" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true">
 </p>
